feat: update everything for new era!